# solarManagement

./: .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt  solar.sh  solarmanagement.py  srf_meteo.py  update_ddns.sh
